# GhostRender

./: .gitignore  CMakeLists.txt  README.md  compile.sh  setup.sh
app/src/: main.cpp
engine/: CMakeLists.txt
engine/include/Ghost/: IRenderSystem.hpp  application.hpp  frameInfo.hpp  ghostApp.hpp  ghostBuffer.hpp  ghostCamera.hpp  ghostCommandPool.hpp  ghostDescriptorManager.hpp  ghostDescriptors.hpp  ghostGameObject.hpp  ghostGraphicsPipeline.hpp  ghostImage.hpp  ghostModel.hpp  ghostRender.hpp  ghostRenderObject.hpp  ghostRenderer.hpp  ghostSurface.hpp  ghostSwapchain.hpp  ghostTexture.hpp  pipelineConfig.hpp  queueFamilyIndicies.hpp  simpleRenderSystem.hpp  swapChainDetails.hpp  utils.hpp  vulkanDevice.hpp  vulkanInstance.hpp  windowGLFW.hpp
engine/src/: application.cpp  ghostApp.cpp  ghostBuffer.cpp  ghostCamera.cpp  ghostCommandPool.cpp  ghostDescriptorManager.cpp  ghostDescriptors.cpp  ghostGameObject.cpp  ghostGraphicsPipeline.cpp  ghostImage.cpp  ghostModel.cpp  ghostRender.cpp  ghostRenderer.cpp  ghostSurface.cpp  ghostSwapchain.cpp  ghostTexture.cpp  pipelineConfig.cpp  queueFamilyIndicies.cpp  simpleRenderSystem.cpp  utils.cpp  vulkanDevice.cpp  vulkanInstance.cpp  windowGLFW.cpp
sandboxApp/: CMakeLists.txt
sandboxApp/src/: application.cpp  application.hpp  main.cpp  sandboxApp.cpp  sandboxApp.hpp  windowGLFW.cpp  windowGLFW.hpp
shaders/: frag.frag  vert.vert
